adding reset btn function

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p class="warning"></p>
 
       <div class="buttons">
-        <button class="reset">reste</button>
+        <button class="reset">Reset</button>
       </div>
       <form id="radio-buttons">
         <input type="radio" name="color" id="black" value="black" />
