--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@300;400&family=Open+Sans:wght@400;700&family=Podkova:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles.css" />
     <title>Sketch</title>
   </head>
@@ -43,6 +49,24 @@
 
       <div class="board">
         <div class="container"></div>
+      </div>
+      <div class="footer">
+        <p>
+          2022 Mustafa for
+          <a
+            href="https://www.theodinproject.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            >The Odin Project</a
+          >
+        </p>
+        <a
+          href="https://github.com/mustafa-bhm/cocktail-final-project"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="./assets/github.svg" />
+        </a>
       </div>
     </div>
   </body>
